plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'org.hibernate.orm' version '6.6.29.Final'
	id 'org.graalvm.buildtools.native' version '0.11.0'
	id 'jacoco'
}

group = 'app.ister'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}



dependencies {
	compileOnly 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'

	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
	implementation("org.springframework.boot:spring-boot-starter-security")
	implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
	implementation("org.springframework.security:spring-security-oauth2-jose")
	runtimeOnly("com.h2database:h2")
	runtimeOnly 'org.postgresql:postgresql'

	implementation('org.springframework.boot:spring-boot-starter-actuator')
	implementation("io.micrometer:micrometer-registry-prometheus:1.15.4")

	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'

	implementation 'org.springframework.amqp:spring-rabbit:3.2.7'

	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13")
	implementation("org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.13")

	// https://mvnrepository.com/artifact/com.github.kokorin.jaffree/jaffree
	implementation("com.github.kokorin.jaffree:jaffree:2024.08.29")

	// https://mvnrepository.com/artifact/com.google.jimfs/jimfs
	testImplementation("com.google.jimfs:jimfs:1.3.1")

	implementation "uk.co.conoregan:themoviedbapi:2.3.1"
}

tasks.named('test') {
	useJUnitPlatform()
	// When enable native image trace agent, disable jacoco.
//	jvmArgs '-agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image'
}

tasks.named('bootRun') {
	bootRun.systemProperty 'spring.profiles.active', "local"
//	jvmArgs '-agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image'
}

tasks.named("bootBuildImage") {
	imageName.set("ghcr.io/ister-app/server")
	builder = "docker.io/paketobuildpacks/builder-jammy-full:latest"
	runImage = "docker.io/paketobuildpacks/run-jammy-full:latest"
	docker {
		host = "unix:///run/user/1000/podman/podman.sock"
		bindHostToBuilder = true
	}
}

hibernate {
	enhancement {
		enableAssociationManagement = true
	}
}

jacocoTestReport {
	reports {
		xml.required = true
	}
}
